home/namespaced/monitoring/virtualservices.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
spec:
  gateways:
  - istio-gateways/home-mtaylor-io
  hosts:
  - grafana.home.mtaylor.io
  http:
  - route:
    - destination:
        host: grafana.monitoring.svc.cluster.local
        port:
          number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
spec:
  gateways:
  - istio-gateways/home-mtaylor-io
  hosts:
  - prometheus.home.mtaylor.io
  http:
  - route:
    - destination:
        host: prometheus-k8s.monitoring.svc.cluster.local
        port:
          number: 9090
